--- a/historial.html
+++ b/historial.html
@@ -20,13 +20,52 @@
 		<div class="viaje">
 			<div class="viajeIzq">
 				<ul>
-					<li><label>FECHA</label></li>
-					<li><label>RUTA</label></li>
+					<li><label>19/09/18</label></li>
+					<li><label>RUTA B</label></li>
 				</ul>
 			</div>
 			<div class="viajeDer">
 				<ul>
-					<li><label>PRECIO</label></li>
+					<li><label>$8.50</label></li>
+				</ul>
+			</div>
+		</div>
+		<div class="viaje">
+			<div class="viajeIzq">
+				<ul>
+					<li><label>18/09/18</label></li>
+					<li><label>RUTA B</label></li>
+				</ul>
+			</div>
+			<div class="viajeDer">
+				<ul>
+					<li><label>$8.50</label></li>
+				</ul>
+			</div>
+		</div>
+		<div class="viaje">
+			<div class="viajeIzq">
+				<ul>
+					<li><label>15/09/18</label></li>
+					<li><label>RUTA C</label></li>
+				</ul>
+			</div>
+			<div class="viajeDer">
+				<ul>
+					<li><label>$20.50</label></li>
+				</ul>
+			</div>
+		</div>
+		<div class="viaje">
+			<div class="viajeIzq">
+				<ul>
+					<li><label>10/09/18</label></li>
+					<li><label>RUTA A</label></li>
+				</ul>
+			</div>
+			<div class="viajeDer">
+				<ul>
+					<li><label>$8.50</label></li>
 				</ul>
 			</div>
 		</div>
