--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		Contraseña: <br>
 		<input type="password" name="pass" required>
 	</label><br><br>
-	<input type="submit" name="iniciar" value="Iniciar Sesión">
+	<input type="submit" name="iniciar" value="Iniciar Sesión" onclick="location.href = 'inicio.html';">
 </form><br>
 <div class="footer">
 <a href="registro.html">¿No tienes cuenta? ¡Regístrate ahora!</a>
