--- a/inicio.html
+++ b/inicio.html
@@ -14,7 +14,7 @@
             <ul class="menus">
                 <li>Perfil</li>
                 <li><a href="historial.html">Historial</a></li>
-                <li><a href="index.php?salir=1">Cerrar Sesión</a></li>
+                <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
             
         </div>
@@ -68,10 +68,10 @@
         
         <nav class="navbar">
             <ul class="rutas">
-                <a ><li class="ruta" id="rutaA"><span><label>RUTA A</label></span><span id="precio"><label>$12.00</label></span></li></a>
-                <a ><li class="ruta" id="rutaB"><span><label>RUTA B</label></span><span id="precio"><label>$8.00</label></span></li></a>
-                <a ><li class="ruta" id="rutaC"><span><label>RUTA C</label></span><span id="precio"><label>$9.50</label></span></li></a>
-                <a ><li class="ruta" id="rutaD"><span><label>RUTA D</label></span><span id="precio"><label>$15.00</label></span></li></a>
+                <a href="pago.html"><li class="ruta" id="rutaA"><span><label>RUTA A</label></span><span id="precio"><label>$12.00</label></span></li></a>
+                <a href="pago.html"><li class="ruta" id="rutaB"><span><label>RUTA B</label></span><span id="precio"><label>$8.00</label></span></li></a>
+                <a href="pago.html"><li class="ruta" id="rutaC"><span><label>RUTA C</label></span><span id="precio"><label>$9.50</label></span></li></a>
+                <a href="pago.html"><li class="ruta" id="rutaD"><span><label>RUTA D</label></span><span id="precio"><label>$15.00</label></span></li></a>
             </ul>
         </nav>
     </body>
