--- a/registro.html
+++ b/registro.html
@@ -35,7 +35,7 @@
 		Número de Celular:<br>
 		<input type="number" name="num" required>
 	</label><br><br>
-	<input type="submit" name="registro" value="Registro">
+	<input type="submit" name="registro" value="Registro" onclick="location.href = 'index.html';">
 </form><br><br>
 <div class="footer">
 <a href="index.html">¿Ya tienes cuenta? ¡Inicia sesión para continuar!</a>
