--- a/inicio.html
+++ b/inicio.html
@@ -6,6 +6,8 @@
          <script type="text/javascript" src="js/funciones.js"></script>
         <link rel="stylesheet" type="text/css" href="estilo.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+        <meta http-equiv="Content-Security-Policy" content="default-src *; script-src * 'unsafe-inline'; object-src *; style-src * 'unsafe-inline'; img-src *; media-src *; frame-src *; font-src *; connect-src *">
     </head>
     <body>
         <nav id="navegar"><img src="img/menu-white.png" onclick="mostrar()"></nav>
