--- a/historial.html
+++ b/historial.html
@@ -3,72 +3,26 @@
 <head>
 	<meta charset="utf-8">
 	<title>Historial de viajes</title>
-	<link rel="stylesheet" type="text/css" href="estiloHistorial.css">
-	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+	<script type="text/javascript" src="js/funciones.js"></script>
+	<link rel="stylesheet" type="text/css" href="estilos/estiloHistorial.css">
+	<link rel="stylesheet" type="text/css" href="estilos/FontAwesome/fontawesome-all.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 	<div class="contenido">
 		<div class="header">
 			<div class="back">
-				<a href="inicio.html"><i class="fas fa-chevron-circle-left fa-2x" onclick=""></i></a>
+				<a href="inicio.html"><i class="fas fa-chevron-circle-left fa-2x" ></i></a>
 			</div>
 			<div class="titulo">
 				<h2>Tus viajes</h2>
 			</div>
 		</div>
-		<div class="viaje">
-			<div class="viajeIzq">
-				<ul>
-					<li><label>19/09/18</label></li>
-					<li><label>RUTA B</label></li>
-				</ul>
-			</div>
-			<div class="viajeDer">
-				<ul>
-					<li><label>$8.50</label></li>
-				</ul>
-			</div>
-		</div>
-		<div class="viaje">
-			<div class="viajeIzq">
-				<ul>
-					<li><label>18/09/18</label></li>
-					<li><label>RUTA B</label></li>
-				</ul>
-			</div>
-			<div class="viajeDer">
-				<ul>
-					<li><label>$8.50</label></li>
-				</ul>
-			</div>
-		</div>
-		<div class="viaje">
-			<div class="viajeIzq">
-				<ul>
-					<li><label>15/09/18</label></li>
-					<li><label>RUTA C</label></li>
-				</ul>
-			</div>
-			<div class="viajeDer">
-				<ul>
-					<li><label>$20.50</label></li>
-				</ul>
-			</div>
-		</div>
-		<div class="viaje">
-			<div class="viajeIzq">
-				<ul>
-					<li><label>10/09/18</label></li>
-					<li><label>RUTA A</label></li>
-				</ul>
-			</div>
-			<div class="viajeDer">
-				<ul>
-					<li><label>$8.50</label></li>
-				</ul>
-			</div>
-		</div>
+
+		
+		<section class="viaje" style="margin-bottom: 2%;">
+		</section>
 	</div>
+	<script type="text/javascript">window.addEventListener('load', cargarHistorial, true);</script>
 </body>
 </html>
