--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>BussApp - Bienvenido</title>
-	<meta charset="utf-8">
-	<script type="text/javascript" src="funciones.js"></script>
-	<link rel="stylesheet" type="text/css" href="estilos.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-</head>
-<body>
-<h1>BussApp</h1>
-
-<form action="" method="POST">
-	<label>
-		Número de Celular:
-		<input type="number" name="numero" required>
-	</label><br><br>
-	<label>
-		Contraseña: <br>
-		<input type="password" name="pass" required>
-	</label><br><br>
-	<input type="submit" name="iniciar" value="Iniciar Sesión" onclick="location.href = 'inicio.html';">
-</form><br>
-<div class="footer">
-<a href="registro.html">¿No tienes cuenta? ¡Regístrate ahora!</a>
-</div>
-
-
-</body>
+	<head>
+		<title>BussApp - Bienvenido</title>
+		<meta charset="utf-8">
+		<script type="text/javascript" src="js/funciones.js"></script>
+		<link rel="stylesheet" type="text/css" href="estilos/estilos.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	</head>
+	<body>
+		<div class="contenedor">
+			<br><br><br>
+			<img src="img/logo.png" alt="">
+			<h1>BussApp</h1>
+			
+			<form>
+				<label>
+					Número de Celular:
+					<input type="number" name="cel" id="cel" required>
+				</label><br><br>
+				<label>
+					Contraseña: <br>
+					<input type="password" name="pass" id="pass" required>
+				</label><br><br>
+				<input type="button" name="iniciar" value="Iniciar Sesión" onclick="inicioSesion()">
+			</form><br>
+			<div class="footer">
+				<a href="registro.html">¿No tienes cuenta? ¡Regístrate ahora!</a>
+			</div>
+		</div>
+	</body>
 </html>
