--- a/registro.html
+++ b/registro.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Make-Up Me - Registro</title>
-	<meta charset="utf-8">
-	<script type="text/javascript" src="funciones.js"></script>
-	<link rel="stylesheet" type="text/css" href="estilos.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-</head>
-<body>
-
-<h1>¡Registrate!</h1>
-<form action="#" method="POST">
-	<label>
-		Nombre: <br>
-		<input type="text" name="nombre" required>
-	</label><br><br>
-	<label>
-		Apellidos:<br>
-		<input type="text" name="ape" required>
-	</label><br><br>
-	<label>
-		Correo:<br>
-		<input type="mail" name="mail" required>
-	</label><br><br>
-	<label>
-		Contraseña:<br> 
-		<input type="password" name="pass1" required>
-	</label><br><br>
-	<label>
-		Confirmar contraseña:<br>
-		<input type="password" name="pass2" required>
-	</label><br><br>
-	<label>
-		Número de Celular:<br>
-		<input type="number" name="num" required>
-	</label><br><br>
-	<input type="submit" name="registro" value="Registro" onclick="location.href = 'index.html';">
-</form><br><br>
-<div class="footer">
-<a href="index.html">¿Ya tienes cuenta? ¡Inicia sesión para continuar!</a>
-</div>
-</body>
+	<head>
+		<title>Make-Up Me - Registro</title>
+		<meta charset="utf-8">
+		<script type="text/javascript" src="js/funciones.js"></script>
+		<link rel="stylesheet" type="text/css" href="estilos/estilos.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	</head>
+	<body>
+		<div class="contenedor">
+			<br>
+			<h1>¡Registrate!</h1>
+			<form>
+				<label>
+					Nombre: <br>
+					<input type="text" name="nombre" id="nombre" required>
+				</label><br><br>
+				<label>
+					Apellidos:<br>
+					<input type="text" name="ape" id="ape" required>
+				</label><br><br>
+				<label>
+					Correo:<br>
+					<input type="mail" name="mail" id="mail" required>
+				</label><br><br>
+				<label>
+					Contraseña:<br>
+					<input type="password" name="pass1" id="pass1" required>
+				</label><br><br>
+				<label>
+					Confirmar contraseña:<br>
+					<input type="password" name="pass2" id="pass2" required>
+				</label><br><br>
+				<label>
+					Número de Celular:<br>
+					<input type="number" name="num" id="num" required>
+				</label><br><br>
+				<input type="submit" name="registro" value="Registro" onclick="registrar()">
+			</form>
+			<div class="footer">
+				<a href="index.html">¿Ya tienes cuenta? ¡Inicia sesión para continuar!</a>
+			</div>
+		</div>
+	</body>
 </html>
