--- a/historial.html
+++ b/historial.html
@@ -20,7 +20,7 @@
 		</div>
 
 		
-		<section class="viaje" style="margin-bottom: 2%;">
+		<section class="viajes" style="margin-bottom: 2%;">
 		</section>
 	</div>
 	<script type="text/javascript">window.addEventListener('load', cargarHistorial, true);</script>
