--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="contenedor">
 			<br><br><br>
 			<img src="img/logo.png" alt="">
-			<h1>BussApp</h1>
+			<h1>BusApp</h1>
 			
 			<form>
 				<label>
