--- a/registro.html
+++ b/registro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Make-Up Me - Registro</title>
+		<title>BusApp - Registro</title>
 		<meta charset="utf-8">
 		<script type="text/javascript" src="js/funciones.js"></script>
 		<link rel="stylesheet" type="text/css" href="estilos/estilos.css">
